added query result logic